Fix the DS component xml files
git-svn-id: https://svn.apache.org/repos/asf/tuscany/java/sca@752766 13f79535-47bb-0310-9956-ffa450edef68